Updated Android SDK to 4.3.1
* Update native Android Engagement SDK to 4.3.1 (Android 0 support)
* Fix Android manifest not allways found
* Fix some outdated APIs

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .gradle
 local.properties
-.idea/workspace.xml
-.idea/libraries
+*.iml
+**/.idea/
+**/.idea/**
+**/xcuserdata/
 .DS_Store
 build/
 captures/
