--- a/src/Android/libEngagementUnity/build.gradle
+++ b/src/Android/libEngagementUnity/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'com.android.library'
 
-
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
+
+    defaultConfig {
+        minSdkVersion 10
+        targetSdkVersion 26
+    }
 
     buildTypes {
         release {
@@ -17,19 +21,21 @@ android {
         disable 'WebViewLayout'
     }
 }
+
 android.libraryVariants.all { variant ->
     variant.outputs.each { output ->
         output.packageLibrary.exclude('libs/unity-classes.jar')
     }
 }
+
 repositories {
     flatDir {
         dirs 'res'
     }
 }
 
-
 dependencies {
+    compile 'com.android.support:support-v4:26.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 }
